--- a/WebContent/template/mylayout.xhtml
+++ b/WebContent/template/mylayout.xhtml
@@ -1,72 +1,78 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:c="http://java.sun.com/jsp/jstl/core"
-    xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-    <title><ui:insert name="title">My application</ui:insert></title>
-    <h:outputStylesheet library="webjars"
-        name="bootstrap/3.3.7/css/bootstrap.min-jsf.css" />
-    <h:outputScript library="webjars"
-        name="jquery/1.11.1/jquery.js" />
-    <h:outputScript library="webjars"
-        name="bootstrap/3.3.7/js/bootstrap.js" />
+	<title><ui:insert name="title">My application</ui:insert></title>
+	<h:outputStylesheet library="webjars"
+		name="bootstrap/3.3.7/css/bootstrap.min-jsf.css" />
+	<h:outputScript library="webjars" name="jquery/1.11.1/jquery.js" />
+	<h:outputScript library="webjars"
+		name="bootstrap/3.3.7/js/bootstrap.js" />
 </h:head>
 <h:body>
 
-    <div class="container">
+	<div class="container">
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1"
-                    aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">
-                    <ui:insert name="header">
-                        <span>My application</span>
-                    </ui:insert>
-                </a>
-            </div>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+						aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="accueil.xhtml"> <ui:insert
+							name="header">
+							<span>My application</span>
+						</ui:insert>
+					</a>
+				</div>
 
-            <!-- Mon menu -->
-            <div class="collapse navbar-collapse"
-                id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle"
-                        data-toggle="dropdown" role="button" aria-haspopup="true"
-                        aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ui:include src="/template/menu.xhtml" />
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+				<!-- Mon menu -->
+				<div class="collapse navbar-collapse"
+					id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><h:link outcome="accueil">
+								<span>Liste de CV</span>
+							</h:link></li>
+						<c:set var="auth" value="#{personne.authPerson}" />
+						<c:choose>
+							<c:when test="${auth.id eq 00}">
+								<li><h:link outcome="authPerson">
+										<span>Connection</span>
+									</h:link></li>
+							</c:when>
+							<c:otherwise>
+								<li><h:commandButton action="#{personne.logOut()}"
+										value="Deconnection" /></li>
+							</c:otherwise>
+						</c:choose>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-    <ui:debug />
-    <div>
-        <ui:insert name="content">
-            <p>CONTENT</p>
-        </ui:insert>
-        <h:messages />
-    </div>
+		<ui:debug />
+		<div>
+			<ui:insert name="content">
+				<p>CONTENT</p>
+			</ui:insert>
+			<h:messages />
+		</div>
 
-    <footer class="page-footer">
-        <div class="footer-copyright text-center py-3">
-            <ui:insert name="footer">
-                <span>(c) 2018</span>
-            </ui:insert>
-        </div>
-    </footer>
-    </div>
+		<footer class="page-footer">
+			<div class="footer-copyright text-center py-3">
+				<ui:insert name="footer">
+					<span>(c) 2019</span>
+				</ui:insert>
+			</div>
+		</footer>
+	</div>
 </h:body>
 </html>
